compiler/lume_hir/src/snapshots/lume_hir__lower__tests__loop_snapshots@iter_loop_continue.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower_expr(\"for pattern in [1, 2, 3] { continue; }\").unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: foo,
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: void,
                        type_params: [],
                        location: <internal>:12:16,
                    },
                ),
                block: Block {
                    statements: [
                        Statement {
                            id: 0,
                            kind: IteratorLoop(
                                IteratorLoop {
                                    id: 0,
                                    collection: Expression {
                                        id: 5871781006564002453,
                                        location: <internal>:34:35,
                                        kind: StaticCall(
                                            StaticCall {
                                                id: 5871781006564002453,
                                                name: std::Array::with_capacity,
                                                type_arguments: [
                                                    Implicit {
                                                        location: <internal>:0:0,
                                                    },
                                                ],
                                                arguments: [
                                                    Expression {
                                                        id: 11743562013128004906,
                                                        location: <internal>:0:0,
                                                        kind: Literal(
                                                            Literal {
                                                                id: 17615343019692007359,
                                                                location: <internal>:0:0,
                                                                kind: Int(
                                                                    IntLiteral {
                                                                        id: 5040379952546458196,
                                                                        value: 3,
                                                                        kind: U64,
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ],
                                            },
                                        ),
                                    },
                                    block: Block {
                                        statements: [
                                            Statement {
                                                id: 10912160959110460649,
                                                kind: Continue(
                                                    Continue {
                                                        id: 10912160959110460649,
                                                    },
                                                ),
                                                location: <internal>:46:55,
                                            },
                                        ],
                                        location: <internal>:44:57,
                                    },
                                    location: <internal>:19:57,
                                },
                            ),
                            location: <internal>:19:57,
                        },
                    ],
                    location: <internal>:17:59,
                },
                location: <internal>:0:59,
            },
        ),
    },
    statements: {
        10912160959110460649: Statement {
            id: 10912160959110460649,
            kind: Continue(
                Continue {
                    id: 10912160959110460649,
                },
            ),
            location: <internal>:46:55,
        },
        0: Statement {
            id: 0,
            kind: IteratorLoop(
                IteratorLoop {
                    id: 0,
                    collection: Expression {
                        id: 5871781006564002453,
                        location: <internal>:34:35,
                        kind: StaticCall(
                            StaticCall {
                                id: 5871781006564002453,
                                name: std::Array::with_capacity,
                                type_arguments: [
                                    Implicit {
                                        location: <internal>:0:0,
                                    },
                                ],
                                arguments: [
                                    Expression {
                                        id: 11743562013128004906,
                                        location: <internal>:0:0,
                                        kind: Literal(
                                            Literal {
                                                id: 17615343019692007359,
                                                location: <internal>:0:0,
                                                kind: Int(
                                                    IntLiteral {
                                                        id: 5040379952546458196,
                                                        value: 3,
                                                        kind: U64,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                    block: Block {
                        statements: [
                            Statement {
                                id: 10912160959110460649,
                                kind: Continue(
                                    Continue {
                                        id: 10912160959110460649,
                                    },
                                ),
                                location: <internal>:46:55,
                            },
                        ],
                        location: <internal>:44:57,
                    },
                    location: <internal>:19:57,
                },
            ),
            location: <internal>:19:57,
        },
    },
    expressions: {
        5871781006564002453: Expression {
            id: 5871781006564002453,
            location: <internal>:34:35,
            kind: StaticCall(
                StaticCall {
                    id: 5871781006564002453,
                    name: std::Array::with_capacity,
                    type_arguments: [
                        Implicit {
                            location: <internal>:0:0,
                        },
                    ],
                    arguments: [
                        Expression {
                            id: 11743562013128004906,
                            location: <internal>:0:0,
                            kind: Literal(
                                Literal {
                                    id: 17615343019692007359,
                                    location: <internal>:0:0,
                                    kind: Int(
                                        IntLiteral {
                                            id: 5040379952546458196,
                                            value: 3,
                                            kind: U64,
                                        },
                                    ),
                                },
                            ),
                        },
                    ],
                },
            ),
        },
    },
}
