compiler/lume_hir/src/snapshots/lume_hir__lower__tests__loop_snapshots@iter_loop_statement.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower_expr(\"for pattern in [1, 2, 3] { let a = 0; }\").unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: foo,
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: void,
                        type_params: [],
                        location: <internal>:12:16,
                    },
                ),
                block: Block {
                    statements: [
                        Statement {
                            id: 0,
                            kind: IteratorLoop(
                                IteratorLoop {
                                    id: 0,
                                    collection: Expression {
                                        id: 5871781006564002453,
                                        location: <internal>:34:35,
                                        kind: StaticCall(
                                            StaticCall {
                                                id: 5871781006564002453,
                                                name: std::Array::with_capacity,
                                                type_arguments: [
                                                    Implicit {
                                                        location: <internal>:0:0,
                                                    },
                                                ],
                                                arguments: [
                                                    Expression {
                                                        id: 11743562013128004906,
                                                        location: <internal>:0:0,
                                                        kind: Literal(
                                                            Literal {
                                                                id: 17615343019692007359,
                                                                location: <internal>:0:0,
                                                                kind: Int(
                                                                    IntLiteral {
                                                                        id: 5040379952546458196,
                                                                        value: 3,
                                                                        kind: U64,
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ],
                                            },
                                        ),
                                    },
                                    block: Block {
                                        statements: [
                                            Statement {
                                                id: 10912160959110460649,
                                                kind: Variable(
                                                    VariableDeclaration {
                                                        id: 10912160959110460649,
                                                        name: Identifier {
                                                            name: "a",
                                                            location: <internal>:50:51,
                                                        },
                                                        declared_type: None,
                                                        value: Expression {
                                                            id: 16783941965674463102,
                                                            location: <internal>:54:55,
                                                            kind: Literal(
                                                                Literal {
                                                                    id: 16783941965674463102,
                                                                    location: <internal>:54:55,
                                                                    kind: Int(
                                                                        IntLiteral {
                                                                            id: 16783941965674463102,
                                                                            value: 0,
                                                                            kind: I32,
                                                                        },
                                                                    ),
                                                                },
                                                            ),
                                                        },
                                                    },
                                                ),
                                                location: <internal>:46:56,
                                            },
                                        ],
                                        location: <internal>:44:58,
                                    },
                                    location: <internal>:19:58,
                                },
                            ),
                            location: <internal>:19:58,
                        },
                    ],
                    location: <internal>:17:60,
                },
                location: <internal>:0:60,
            },
        ),
    },
    statements: {
        10912160959110460649: Statement {
            id: 10912160959110460649,
            kind: Variable(
                VariableDeclaration {
                    id: 10912160959110460649,
                    name: Identifier {
                        name: "a",
                        location: <internal>:50:51,
                    },
                    declared_type: None,
                    value: Expression {
                        id: 16783941965674463102,
                        location: <internal>:54:55,
                        kind: Literal(
                            Literal {
                                id: 16783941965674463102,
                                location: <internal>:54:55,
                                kind: Int(
                                    IntLiteral {
                                        id: 16783941965674463102,
                                        value: 0,
                                        kind: I32,
                                    },
                                ),
                            },
                        ),
                    },
                },
            ),
            location: <internal>:46:56,
        },
        0: Statement {
            id: 0,
            kind: IteratorLoop(
                IteratorLoop {
                    id: 0,
                    collection: Expression {
                        id: 5871781006564002453,
                        location: <internal>:34:35,
                        kind: StaticCall(
                            StaticCall {
                                id: 5871781006564002453,
                                name: std::Array::with_capacity,
                                type_arguments: [
                                    Implicit {
                                        location: <internal>:0:0,
                                    },
                                ],
                                arguments: [
                                    Expression {
                                        id: 11743562013128004906,
                                        location: <internal>:0:0,
                                        kind: Literal(
                                            Literal {
                                                id: 17615343019692007359,
                                                location: <internal>:0:0,
                                                kind: Int(
                                                    IntLiteral {
                                                        id: 5040379952546458196,
                                                        value: 3,
                                                        kind: U64,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                    block: Block {
                        statements: [
                            Statement {
                                id: 10912160959110460649,
                                kind: Variable(
                                    VariableDeclaration {
                                        id: 10912160959110460649,
                                        name: Identifier {
                                            name: "a",
                                            location: <internal>:50:51,
                                        },
                                        declared_type: None,
                                        value: Expression {
                                            id: 16783941965674463102,
                                            location: <internal>:54:55,
                                            kind: Literal(
                                                Literal {
                                                    id: 16783941965674463102,
                                                    location: <internal>:54:55,
                                                    kind: Int(
                                                        IntLiteral {
                                                            id: 16783941965674463102,
                                                            value: 0,
                                                            kind: I32,
                                                        },
                                                    ),
                                                },
                                            ),
                                        },
                                    },
                                ),
                                location: <internal>:46:56,
                            },
                        ],
                        location: <internal>:44:58,
                    },
                    location: <internal>:19:58,
                },
            ),
            location: <internal>:19:58,
        },
    },
    expressions: {
        5871781006564002453: Expression {
            id: 5871781006564002453,
            location: <internal>:34:35,
            kind: StaticCall(
                StaticCall {
                    id: 5871781006564002453,
                    name: std::Array::with_capacity,
                    type_arguments: [
                        Implicit {
                            location: <internal>:0:0,
                        },
                    ],
                    arguments: [
                        Expression {
                            id: 11743562013128004906,
                            location: <internal>:0:0,
                            kind: Literal(
                                Literal {
                                    id: 17615343019692007359,
                                    location: <internal>:0:0,
                                    kind: Int(
                                        IntLiteral {
                                            id: 5040379952546458196,
                                            value: 3,
                                            kind: U64,
                                        },
                                    ),
                                },
                            ),
                        },
                    ],
                },
            ),
        },
        16783941965674463102: Expression {
            id: 16783941965674463102,
            location: <internal>:54:55,
            kind: Literal(
                Literal {
                    id: 16783941965674463102,
                    location: <internal>:54:55,
                    kind: Int(
                        IntLiteral {
                            id: 16783941965674463102,
                            value: 0,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
    },
}
